# droplet-drug-detector

./: .env-template  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.azure-devops/pipelines/: build-aml-environment.yaml  build_aml_environment.yaml  droplet-drug-classificator-training.yaml  sample-pipeline.yaml  sample_pipeline.yaml
.azure-devops/templates/: configure-aml-extension.yaml  connect_to_aml_workspace.yaml  create-conda-env.yaml  install-azure-cli.yaml  substitute_env_vars.yaml
.azure/devops/pipelines/: build_aml_environment.yaml  sample_pipeline.yaml
.azure/devops/templates/: create_conda_env.yaml  substitute_env_vars.yaml
.github/workflows/: ci.yaml
configs/: base.yaml  classificator-default.yaml  default.yaml  regressor-default.yaml
environments/: base.yaml  droplet-drug-detector.yaml  infra.yaml  infrastructure.yaml  sample-project.yaml  sample.yaml  sample_project.yaml
src/: build_aml_environment.py  train_model.py
src/aml/: build_aml_environment.py
src/azure/: blob_storage.py  environment.py  ml_client.py
src/azure_ml/: client.py  environment.py
src/common/: settings.py
src/common/aml/: blob_storage.py  environment.py
src/common/azure/: blob_storage.py  environment.py  ml_client.py
src/common/configs/: base.py
src/common/consts/: __init__.py  azure.py  directories.py  extensions.py  machine_learning.py  project.py
src/configs/: base.py  classification.py
src/machine_learning/: augmentations.py  callbacks.py  data.py  loggers.py  optimizer.py  preprocessing.py  scheduler.py  trainer.py
(+112 files in other folders)
